--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,8 @@ img {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: 75%;
+  width: 70%;
+  gap: 93px;
 }
 
 .main-navigation ul {
@@ -161,7 +162,7 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 25%;
+  width: 30%;
 }
 
 .container-contact a {
@@ -1022,4 +1023,22 @@ textarea:hover {
 
 .terms-and-conditions-check:not(:checked) + label > svg {
   visibility: hidden;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 428px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1158px;
+  }
 }
